--- a/styl.css
+++ b/styl.css
@@ -260,7 +260,7 @@ body {
     margin-top: 15%;
     font-size: 24px!important;
     text-shadow: 0.25rem 0.2rem 1px rgba(187, 187, 187, 0.15);
-    color: #d3d3d3;
+    color: var(--pattern-bright);
     letter-spacing: 0.075rem;
 }
 #content-title:nth-child(n) {
@@ -418,7 +418,7 @@ body {
     color: #f5f5f5;
     font-size: 48px;
     letter-spacing: 0.075rem;
-    text-shadow: 0.4rem 0.3rem 1px rgba(187, 187, 187, 0.15);
+    text-shadow: 0.3rem 0.2rem 1px rgba(187, 187, 187, 0.15);
     font-weight: 500;
     margin: 3.5rem 0 1rem 0;
 }
